--- a/Recipes.css
+++ b/Recipes.css
@@ -42,6 +42,7 @@ a, button, .input, .account a {
   padding-left: 0.3%;
   display: flex;
   justify-content: center;
+  margin-left: 2px;
 }
 .totop{
   font-size: 20px;
@@ -59,7 +60,7 @@ a, button, .input, .account a {
   position: relative;
   display: inline-block;
   font-weight: bold;
-  margin: -3px;
+  margin-left: -3px;
 }
 .dropdown-content {
   display: none;
